[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/simulation_controller.gd" id=1]
[ext_resource type="Script" path="res://render/swarm_renderer.gd" id=2]
[ext_resource type="Script" path="res://ui/ui_overlay.gd" id=3]

[node name="Main" type="Node2D"]

[node name="SimulationController" type="Node" parent="."]
script = ExtResource(1)

[node name="SwarmRenderer" type="Node2D" parent="."]
script = ExtResource(2)

[node name="UiOverlay" type="CanvasLayer" parent="."]
script = ExtResource(3)

[node name="Overlay" type="Control" parent="UiOverlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 280.0
offset_bottom = 260.0

[node name="Backdrop" type="Panel" parent="UiOverlay/Overlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="UiOverlay/Overlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="TitleLabel" type="Label" parent="UiOverlay/Overlay/VBox"]
text = "PhaseWeave"

[node name="SubtitleLabel" type="Label" parent="UiOverlay/Overlay/VBox"]
text = "Swarm phase-transition simulation"

[node name="Divider" type="HSeparator" parent="UiOverlay/Overlay/VBox"]

[node name="StartButton" type="Button" parent="UiOverlay/Overlay/VBox"]
text = "Start"

[node name="RestartButton" type="Button" parent="UiOverlay/Overlay/VBox"]
text = "Restart"

[node name="PauseButton" type="Button" parent="UiOverlay/Overlay/VBox"]
text = "Pause"

[node name="StatsToggle" type="CheckButton" parent="UiOverlay/Overlay/VBox"]
text = "Stats"

[node name="DensityToggle" type="CheckButton" parent="UiOverlay/Overlay/VBox"]
text = "Density Glow"

[node name="CohesionLabel" type="Label" parent="UiOverlay/Overlay/VBox"]
text = "Cohesion/Repel: 50/50"

[node name="CohesionSlider" type="HSlider" parent="UiOverlay/Overlay/VBox"]
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0
rounded = true

[node name="StatusLabel" type="Label" parent="UiOverlay/Overlay/VBox"]
text = "Status: Idle"

[node name="DebugLabel" type="Label" parent="UiOverlay/Overlay/VBox"]
text = "Seed: --"

[node name="HoverViewportContainer" type="SubViewportContainer" parent="UiOverlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="HoverViewport" type="SubViewport" parent="UiOverlay/HoverViewportContainer"]
transparent_bg = true

[node name="HoverLayer" type="Control" parent="UiOverlay/HoverViewportContainer/HoverViewport"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="HoverBackdrop" type="ColorRect" parent="UiOverlay/HoverViewportContainer/HoverViewport/HoverLayer"]
color = Color(0.0, 0.0, 0.0, 0.9)
mouse_filter = 2

[node name="HoverLabel" type="RichTextLabel" parent="UiOverlay/HoverViewportContainer/HoverViewport/HoverLayer"]
text = ""
mouse_filter = 2
